allservice/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: production
  name: spaceservice
  labels:
    env: production
    module: service
spec:
  selector:
    env: production
    module: service
    application: spaceservice
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: myadmin
    port: 8081
    targetPort: 80
